--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ SHOPIFY_ADMIN_ACCESS_TOKEN=shpat_xxx
 SHOPIFY_CLIENT_ID=
 SHOPIFY_CLIENT_SECRET=
 SHOPIFY_API_VERSION=2026-01
+SHOPIFY_TIMEOUT_MS=15000
 SHOPIFY_CARRIER_SERVICE_NAME=Marketplace Dynamic Shipping
 PUBLIC_CALLBACK_URL=https://your-domain.com/webhooks/shopify/carrier-service
 
@@ -56,3 +57,16 @@ ADMIN_API_KEY=
 
 # Optional persistent seller origin map
 SELLER_ORIGIN_STORE_PATH=./data/runtime/seller-origins.json
+
+# Biteship order sync feature
+BITESHIP_ORDER_FEATURE_ENABLED=true
+BITESHIP_ORDER_AUTO_CREATE_ON_PAID=false
+BITESHIP_ORDER_AUTO_FULFILL_ON_CREATE=false
+SHOPIFY_NOTIFY_CUSTOMER_ON_FULFILLMENT=false
+BITESHIP_ORDER_DELIVERY_TYPE=now
+DASHBOARD_MAX_ORDERS=25
+
+# Observability / audit logs
+RATE_LOG_MAX_ENTRIES=500
+RATE_LOG_STORE_PATH=./data/runtime/rate-logs.json
+ORDER_SYNC_STORE_PATH=./data/runtime/order-sync.json
