--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ SHOPIFY_API_VERSION=2026-01
 SHOPIFY_TIMEOUT_MS=15000
 SHOPIFY_CARRIER_SERVICE_NAME=Marketplace Dynamic Shipping
 PUBLIC_CALLBACK_URL=https://your-domain.com/webhooks/shopify/carrier-service
+AUTO_REGISTER_CARRIER_ON_STARTUP=true
+FAIL_STARTUP_ON_CARRIER_REGISTER_ERROR=false
 
 # Webkul API
 WEBKUL_BASE_URL=https://mvmapi.webkul.com
